# ff-2024-create-python-package

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/fftestpackage/: __init__.py  common.py  root_finder.py
tests/: test_bisect_interval.py  test_divide_numbers.py  test_multiply_numbers.py
