################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "fftestpackage"

version = "0.1.0"

description = "This is a test package for the pyopensci fall festival."
authors = [
    { name = "irideselby", email = "172918893+irideselby@users.noreply.github.com" },
]
license = "MIT"
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.10"
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = []

[project.urls]
Documentation = "https://fftestpackage.readthedocs.io"
Download = "https://pypi.org/project/fftestpackage/#files"

[project.optional-dependencies]
dev = [
    "hatch",
    "pre-commit",
]

################################################################################
# Tool Configuration
################################################################################

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/fftestpackage"]

[tool.hatch.envs.test]
description = '''Environment for running the test suite'''
extra-dependencies = [
    'pytest',
    'pytest-cov',
]

[[tool.hatch.envs.test.matrix]]
python = ['3.10', '3.11']

[tool.hatch.envs.test.scripts]
test = 'pytest {args:--cov=fftestpackage --cov-report=term-missing}'
